--- a/src/components/guestdashboard/paymentsguestdashboard.css
+++ b/src/components/guestdashboard/paymentsguestdashboard.css
@@ -70,7 +70,10 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin: 0 auto; /* Centering */
+    display: block; /* Ensure block-level element */
 }
+
 
 .payment-item img {
     width: 100%;
