--- a/web/src/components/base/Login.css
+++ b/web/src/components/base/Login.css
@@ -79,7 +79,8 @@ label {
 }
 
 .loginInput {
-    width: 92.5%;
+    width: auto;
+    min-width: 100%;
     height: auto;
     padding: 11px 15px;
     margin-top: 20px;
