Revert "Merge pull request #295 from domits1/payment"
This reverts commit ca6b3e40ab70ed3f63fa4ef3850d88ae4013459c, reversing
changes made to dbdbfe462a91247214acaaab58899ab2fe62b96c.

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -76,10 +76,6 @@ ul {
   margin: 0;
 }
 
-p {
-  margin: 0;
-}
-
 li a {
   color: var(--colors-font-interactive, #0A760F);
   text-decoration: none;
@@ -380,5 +376,5 @@ li a {
 }
 
 * {
-  font-family: Kanit, sans-serif;
+  font-family: "KanitRegular";
 }
