--- a/web/src/components/hostdashboard/Accommodations.css
+++ b/web/src/components/hostdashboard/Accommodations.css
@@ -12,8 +12,9 @@
 }
 
 .accocard:hover {
-  box-shadow: 3px 12px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 3px 12px 10px rgba(0, 0, 0, 0.2);
   cursor: pointer;
+  transform: translateY(-10px);
 }
 
 .accocard img {
