--- a/web/src/components/base/ConfirmRegister.css
+++ b/web/src/components/base/ConfirmRegister.css
@@ -27,14 +27,14 @@
     border-radius: 15px;
 }
 
-.confirmEmailDigitsInput {
+.digitinputs {
     margin: 20px;
     display: flex;
     justify-content: center;
     width: 100%;
 }
 
-.confirmEmailDigitsInput_digit {
+.digitinputs_digit {
     text-align: center;
     font-size: 20px;
     width: 40px;
