--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -14,13 +14,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    cursor: pointer;
   
   }
   .wijzer:hover {
-    
-    box-shadow: 4px 4px #003366;
-    transition: .3s;
+    cursor: pointer;
+    transform: translateY(-2px);
   }
   
   .dashboard {
