--- a/web/src/components/landingpage/landing.css
+++ b/web/src/components/landingpage/landing.css
@@ -9,7 +9,7 @@
 }
 
 .calculatorBlock {
-    border: 2px solid #1245A8;
+    border: 2px solid #003366;
     border-radius: 20px;
     margin-top: 30px;
 }
@@ -21,7 +21,7 @@
 }
 
 .pageButtons {
-    border: 2px solid #1245A8;
+    border: 2px solid #003366;
     border-radius: 10px;
     box-shadow: none;
 
@@ -46,7 +46,7 @@
 }
 
 .nextButtons {
-    background-color: #1245A8;
+    background-color: #003366;
     color: #fff;
 
     margin: 10px;
@@ -64,7 +64,7 @@
 }
 
 .selected {
-    background-color: #1245A8;
+    background-color: #003366;
     color: #fff;
 }
 
@@ -85,13 +85,12 @@
     margin-bottom: 30px;
 }
 
-.card:hover,
-.selectedCard {
-    border: 3px solid #1245A8;
+.card:hover, .selectedCard {
+    border: 3px solid #003366;
     border-radius: 10px;
     box-shadow: none;
     cursor: pointer;
-    margin: -3px;
+    margin-top: -3px;
     margin-bottom: 27px;
 }
 
@@ -109,8 +108,8 @@
     padding: 10px;
     border-radius: 10px;
 
-    border: 1px solid #1245A8;
-    box-shadow: 1px 1px 5px 1px #1245A8;
+    border: 1px solid #003366;
+    box-shadow: 1px 1px 5px 1px #003366;
 
     margin: auto;
     margin-top: 30px;
@@ -120,7 +119,6 @@
 .proHosting {
     margin-top: 50px;
 }
-
 .infoCard {
     max-width: 200px;
     max-height: 230px;
@@ -151,126 +149,36 @@
     align-items: center;
     margin-top: 50px;
     margin-bottom: 50px;
-}
-
-.faq-box {
+  }
+  
+  .faq-box {
     width: 80%;
-    border: 2px solid #1245A8;
+    border: 2px solid #003366;
     border-radius: 10px;
     margin: 10px;
     padding: 15px;
     cursor: pointer;
-    max-height: 60px;
+    max-height: 60px; 
     overflow: hidden;
-    transition: max-height 2s ease;
-}
-
-.faq-box:hover {
-    max-height: 200px;
-}
-
-.question {
+    transition: max-height 2s ease; 
+  }
+  
+  .faq-box:hover {
+    max-height: 200px; 
+  }
+  
+  .question {
     font-weight: bold;
     margin-bottom: 8px;
-}
-
-.answer {
+  }
+  
+  .answer {
     max-height: 0;
     overflow: hidden;
-    transition: max-height 2s ease;
-}
-
-.faq-box:hover .answer {
-    max-height: 200px;
-}
-
-.formContainer {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 20px;
-    width: 80%;
-    margin: auto;
-
-}
-
-.formHolder {
-    width: 100%;
-}
-
-.form-section,
-.map-section {
-    width: 45%;
-}
-
-.front-section {
-    width: 50%;
-}
-
-#map-placeholder {
-    width: 100%;
-    height: 300px;
-    background-color: #e0e0e0;
-    text-align: center;
-    line-height: 300px;
-    color: #333;
-    margin-top: 20px;
-}
-
-.formContainer label {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-bottom: 10px;
-    gap: 15px;
-}
-
-.room-type label,
-.room-features label {
-    justify-content: flex-start;
-    cursor: pointer;
-}
-
-
-.formRow {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.textInput,
-.radioInput {
-    width: auto;
-    padding: 11px 15px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
-    border: 1px solid black;
-}
-
-.radioInput {
-    width: 20px;
-    height: 20px;
-    cursor: pointer;
-}
-
-.locationText {
-    min-width: 173px;
-    width: 60%;
-}
-
-.configurations label{
-    min-width: 250px;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 20px;
-    margin-bottom: 20px; 
-    white-space: nowrap
-}
-
-.priceSlider {
-    width: 100%;
-    cursor: ew-resize;
-}
+    transition: max-height 2s ease; 
+  }
+  
+  .faq-box:hover .answer {
+    max-height: 200px; 
+  }
+  
