--- a/web/src/components/base/Register.css
+++ b/web/src/components/base/Register.css
@@ -1,9 +1,7 @@
 /* Login.css */
 
 .registerButton {
-    width: auto;
-    min-width: 100%;
-    width: 300px;
+    width: 100%;
     padding: 8px 15px;
     background: #003366;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
@@ -24,7 +22,7 @@
     font-weight: 400;
     line-height: 54px;
     word-wrap: break-word;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 .registerContainer {
@@ -37,7 +35,8 @@
 
 .registerForm {
     margin-top: 20px;
-    max-width: 25%;
+    min-width: 300px;
+    width: 25%;
     padding: 30px;
     background: #EBFAED;
     border-radius: 15px;
@@ -49,11 +48,11 @@ label {
 }
 
 .registerInput {
-    width: 92.5%;
+    width: 100%;
     height: auto;
     padding: 11px 15px;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     background: white;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
