--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -111,6 +111,15 @@
     background-color: #3fb366;
 }
 
+.helloUsername {
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-family: Kanit, sans-serif;
+    font-weight: 400;
+    line-height: 24px;
+    word-wrap: break-word;
+}
+
 /* CSS for the SearchBar */
 
 @media screen and (max-width: 650px) {
