--- a/web/src/components/guestdashboard/guestdashboard.css
+++ b/web/src/components/guestdashboard/guestdashboard.css
@@ -1,27 +1,70 @@
 .guestdashboard {
     display: flex;
+    width: 90%;
     margin: auto;
-    max-width: 1200px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: #FFFFFF;
-    border-radius: 8px;
+    margin-top: 30px;
+    margin-bottom: 30px;
     overflow: hidden;
 }
 
-.sidebar {
-    padding: 20px;
-    display: inline;
+.dashboards {
+    display: grid;
+    grid-template-columns: 200px auto;
+}
+
+.wijzers {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    cursor: pointer;
+    margin-bottom: 10px;
+    align-items: center;
+    width: 100%;
+    max-width: 200px;
+    border: 0.5px solid black;
+    border-radius: 15px;
+    padding: 5px;
+
+}
+
+.wijzers:hover {
+    box-shadow: 2px 2px #0D9813;
+    transition: .3s;
+    border-bottom: 0.5px solid #0D9813;
+    border-right: 0.5px solid #0D9813;
+}
+
+.disabled:hover {
+    cursor: not-allowed;
+    box-shadow: none;
+    border: 0.5px solid black;
+}
+
+.dashboardSections {
+    display: flex;
     flex-direction: column;
 }
 
-.button {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-    color: #333;
-    font-weight: bold;
-    cursor: pointer;
+
+@media screen and (max-width: 830px) {
+    .dashboards {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .dashboardSections {
+        display: grid;
+        grid-template-columns: auto auto;
+        justify-items: center;
+    }
+
+    .wijzers {
+
+        width: 90%;
+    }
 }
+
 
 .button i {
     margin-right: 10px;
@@ -36,35 +79,45 @@
 
 .leftContent {
     /* If .leftContent's height isn't defined by its content or an explicit height, consider setting one here. */
-    height: 360px; /* Example fixed height; adjust as needed. */
+    height: 360px;
+    /* Example fixed height; adjust as needed. */
 }
 
 .bookingBox {
     /* Adjust the percentage to increase the height relative to .leftContent */
-    height: 60%; /* Example adjustment */
-    margin-bottom: 20px; /* Maintain spacing between boxes */
-    overflow: auto; /* In case the content exceeds the box */
+    height: 60%;
+    /* Example adjustment */
+    margin-bottom: 20px;
+    /* Maintain spacing between boxes */
+    overflow: auto;
+    /* In case the content exceeds the box */
 }
 
 .messageBox {
     /* Adjust the percentage to decrease the height relative to .leftContent */
-    height: 40%; /* Example adjustment */
-    overflow: auto; /* In case the content exceeds the box */
+    height: 40%;
+    /* Example adjustment */
+    overflow: auto;
+    /* In case the content exceeds the box */
 }
-.bookingBox, .messageBox {
-     background-color: #fff;
-     border-radius: 15px;
-     padding: 20px;
-     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-     margin-bottom: 20px;
+
+.bookingBox,
+.messageBox {
+    background-color: #fff;
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
     width: 60%;
- }
+}
+
 .bookingBox img {
     width: 20%;
     height: auto;
     border-radius: 15px;
     margin-top: 10px;
 }
+
 .messageBox button {
     align-self: flex-end;
     padding: 10px 20px;
@@ -78,7 +131,8 @@
     display: flex;
     flex-direction: column;
     margin-left: 1px;
-    width: 100%; /* Ensure it expands to the full available width of its parent */
+    width: 100%;
+    /* Ensure it expands to the full available width of its parent */
 }
 
 .infoBox {
@@ -89,7 +143,8 @@
     margin-bottom: 10px;
     display: flex;
     align-items: center;
-    width: auto; /* Adjust this to control the width more explicitly, e.g., 100% for full width */
+    width: auto;
+    /* Adjust this to control the width more explicitly, e.g., 100% for full width */
 }
 
 .infoBox i {
@@ -104,14 +159,22 @@
 .button.last-button {
     margin-top: 60px;
 }
+
 .icon {
-    width: 24px; /* Or the size you want */
-    height: 24px; /* Or the size you want */
+    width: 24px;
+    /* Or the size you want */
+    height: 24px;
+    /* Or the size you want */
     object-fit: contain;
     margin-right: 10px;
-    display: inline-block; /* To apply padding and borders */
-    border: 1px solid #ccc; /* Example border color */
-    padding: 5px; /* Adjust the padding as needed */
-    border-radius: 12px; /* Optional, for rounded corners */
-    background-color: #f9f9f9; /* Example background color */
+    display: inline-block;
+    /* To apply padding and borders */
+    border: 1px solid #ccc;
+    /* Example border color */
+    padding: 5px;
+    /* Adjust the padding as needed */
+    border-radius: 12px;
+    /* Optional, for rounded corners */
+    background-color: #f9f9f9;
+    /* Example background color */
 }
