Small fix of the 7nights text in listing details

--- a/web/src/components/listingdetails/listingdetails.css
+++ b/web/src/components/listingdetails/listingdetails.css
@@ -517,6 +517,7 @@
     font-family: Kanit, sans-serif;
     font-weight: 300;
     word-wrap: break-word;
+    line-height: 14px;
 }
 
 .listing-details-guests-pets-container {
