--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -8,6 +8,8 @@
 
 .dashboard {
   flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 200px auto;
 }
 
 
@@ -27,12 +29,6 @@
   box-shadow: 4px 4px #003366;
   transition: .3s;
 }
-
-.dashboard {
-  display: grid;
-  grid-template-columns: 200px auto;
-}
-
 
 .dashboardSection {
   display: flex;
@@ -77,12 +73,22 @@
   margin-right: 10px;
   margin-top: 20px;
   padding: 10px;
+  overflow: scroll;
 
 }
 
 .fullBox {
   min-height: 200px;
   overflow: scroll;
+}
+
+.locationBox {
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
 }
 
 .boxText {
@@ -105,12 +111,40 @@
   color: black;
 
 }
+.priceText {
+  border: solid 1px black;
+  border-radius: 15px;
+  padding: 11px;
+  width: 100px;
+}
 
 .withdrawContain {
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10%;
+  width: 50%;
+  margin: 10px;
+  text-align: left;
 }
+
+#date {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  font-family: Arial, sans-serif;
+  color: #333;
+  outline: none;
+  
+}
+
+#date {
+  border-color: #007bff; /* Change to your preferred focus color */
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); /* Change to your preferred focus shadow */
+}
+
 
 @media screen and (max-width: 830px) {
 
