--- a/web/src/components/landingpage/landing.css
+++ b/web/src/components/landingpage/landing.css
@@ -267,7 +267,8 @@
     margin-right: auto;
     font-size: 20px;
     margin-bottom: 20px; 
-    white-space: nowrap
+    white-space: nowrap;
+    
 }
 
 .priceSlider {
