--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -73,13 +73,13 @@
   margin-right: 10px;
   margin-top: 20px;
   padding: 10px;
-  overflow: scroll;
 
 }
 
 .fullBox {
   min-height: 200px;
   overflow: scroll;
+  overflow-x: hidden;
 }
 
 .locationBox {
