--- a/web/src/components/base/SearchBar.css
+++ b/web/src/components/base/SearchBar.css
@@ -2,56 +2,63 @@
   box-sizing: border-box;
 }
 .search-bar-container {
-    
-  width: 45%;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
   position: absolute;
   top: 13px; 
   left: 43%; 
-  transform: translateX(-50%);
 }
 .bar {
-  width: 600px;
+  width: 560px;
   background: white;
   box-shadow: 0 0 5px hsl(0 0% 78%);
   border-radius: 30px;
   display: flex;
   font-size: 0.6rem;
   position: fixed;
-  top: 0;
   left: 54%;
   transform: translateX(-50%);
   height: 55px;
+  cursor: 'pointer'
 }
 
 .bar div {
   text-align: center;
   transition: background 250ms ease, width 250ms ease; 
-  border-radius: 20px;
+  border-radius: 30px;
 }
-.bar div:hover {
+/* .bar div:hover {
   background: hsl(0 0% 94%); 
+} */
+.location:hover{
+  width: 38%;
+  
 }
-.check-in:hover, .check-out:hover, .location:hover, .accommodation:hover {
-  width: 28%;
+.check-in:hover {
+  width: 20%;
   cursor: pointer;
+}
+.check-out:hover{
+  width: 20%;
+  cursor: 'pointer'
 }
 .accommodation:hover {
-  width: 33%;
-  cursor: pointer;
+  width: 28%;
 }
 .check-in{
-  width: 22%;
+  width: 17%;
   align-items: center;
+  cursor: pointer;
 }
 .check-out{
-  width: 22%;
+  width: 17%;
   align-items: center;
+  cursor: pointer;
 }
 .location{
-  width: 22%;
+  width: 35%;
+  align-items: center;
+}
+.accommodation {
+  width: 25%;
   align-items: center;
 }
 .searchbar-input {
@@ -59,8 +66,10 @@
   border: none;
   padding: 0.6rem 0 0 0;
   text-align: center;
+  width: 90%;
   cursor: pointer;
-  width: 80%;
+  pointer-events: none;
+  
 }
 .searchbar-input:focus {
   outline: none;
@@ -68,11 +77,7 @@
 
 ::placeholder {
   font-size: 0.64rem;
-}
-
-.accommodation {
-  width: 27%;
-  align-items: center;
+  
 }
 .bar>div {
   position: relative;
@@ -81,7 +86,7 @@
 .bar>div::before {
   position: absolute;
   content: "";
-  left: 0;
+  left: -5%;
   top: 50%;
   transform: translateY(-50%);
   width: 0.9px;
@@ -95,7 +100,7 @@
   display: inline-block;
   outline: 0;
   cursor: pointer;
-  padding: 4px ;
+  padding: 3px ;
   font-size: 10px;
   line-height: 30px;
   border: 1px solid #0D9813;
@@ -105,8 +110,8 @@
   box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px 0px inset;
   transition: 0.2s cubic-bezier(0.3, 0, 0.5, 1);
   transition-property: color, background-color, border-color;
-  height: 35px;
-  width: 35px;
+  height: 33px;
+  width: 33px;
   margin-top: 10px;
 }
 .searchbar-button:hover {
@@ -142,14 +147,3 @@
 .searchBar:focus {
   outline: none;
 }
-
-
-
-
-
-
-
-
-
-
-
