--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -316,15 +316,15 @@ a:hover {
 }
 
 .search-bar-container {
-    /* padding-top: 20vh; */
+   
     width: 40%;
     padding: 1px;
     margin: auto;
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 10px; /* Pas de gewenste bovenste positie aan */
-    left: 40%; /* Plaats in het midden of pas aan zoals gewenst */
+    top: 10px; 
+    left: 43%; 
     transform: translateX(-50%);
 }
 
