--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -44,6 +44,34 @@
 
 }
 
+.wijzer-grn {
+  display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    cursor: pointer;
+    margin-bottom: 10px;
+    align-items: center;
+    width: 100%;
+    max-width: 200px;
+}
+
+.wijzer-grn,.boxText {
+  border: 0.5px solid black;
+  border-radius: 15px;
+  padding: 5px;
+}
+
+.wijzer-grn:hover {
+  box-shadow: 4px 4px #003366;
+  transition: .3s;
+}
+
+.stripe-icon {
+  height: 48px;
+  width: 48px;
+  border-radius: 20px;
+  border: 2px solid black;
+}
 
 .contentContainer {
   width: 100%;
@@ -161,7 +189,6 @@
   }
 
   .wijzer {
-
     width: 90%;
   }
 }
