--- a/web/src/components/base/SearchBar.css
+++ b/web/src/components/base/SearchBar.css
@@ -9,11 +9,11 @@
   border-radius: 30px;
   display: flex;
   font-size: 0.6rem;
-  position: fixed;
-  left: 54%;
-  transform: translateX(-50%);
+  /* position: fixed; */
+  /* left: 54%; */
+  /* transform: translateX(-50%); */
   height: 55px;
-  cursor: 'pointer'
+  cursor: 'pointer';
 }
 
 .bar div {
@@ -105,7 +105,7 @@
   background-color: transparent;
   box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px 0px inset;
   transition: 0.2s cubic-bezier(0.3, 0, 0.5, 1);
-  transition-property: color, background-color, border-color;
+  transition-property: color;
   height: 33px;
   width: 33px;
   margin-top: 10px;
