--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -10,6 +10,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    flex-wrap: wrap;
 }
 
 .headerRight {
@@ -319,13 +320,13 @@ a:hover {
    
     width: 40%;
     padding: 1px;
-    margin: auto;
+    /* margin: auto; */
     display: flex;
     flex-direction: column;
-    position: absolute;
+    /* position: absolute;
     top: 10px; 
-    left: 43%; 
-    transform: translateX(-50%);
+    left: 43%;  */
+    /* transform: translateX(-50%); */
 }
 
 
