--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -139,13 +139,20 @@
 
 @media screen and (max-width: 650px) {
 
-    .header-nav, .headerRight {
+    .header-nav, .headerRight, .bar{
         flex-direction: column;
         justify-content: center;
-        width: 100%;
+        width: auto;
+        height: auto;
+    }
+    .location, .check-in, .check-out, .accomodation {
+        width: auto;
+        height: auto;
+        padding: 10px;
+        margin: auto;
     }
 
-    .headerButtons, .personalMenu {
+    .headerButtons, .personalMenu, .bar{
         width: 100%;
         margin-top: 10px;
         margin-right: 0;
