fixed the login and register drop down by adding position: relative; back to base.css

--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -43,7 +43,7 @@
 
 /* Adjusted CSS for dropdown */
 .personalMenuDropdown {
-    /* position: relative; */
+    position: relative;
     display: inline-block;
 }
 
