--- a/web/src/components/guestdashboard/guestdashboard.css
+++ b/web/src/components/guestdashboard/guestdashboard.css
@@ -80,6 +80,29 @@
     margin: auto;
 }
 
+.review-tab{
+    border: 2px;
+    border-radius: 15px;
+    margin: 5%;
+    animation: fade-up 1s;
+}
+
+.review-tab:hover {
+    box-shadow: 4px 4px #0D9813;
+    transition: .3s;
+}
+
+@keyframes fade-up {
+    0% {
+        opacity: 0;
+        transform: translateY(30px) scale (0.9);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px) scale(1);
+    }
+}
 
 
 @media screen and (max-width: 830px) {
