--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -88,7 +88,6 @@
 }
 
 .boxColumns {
-  width: 24%;
   height: auto;
   margin: 10px;
   min-width: 155px;
@@ -119,6 +118,7 @@
   height: auto;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   overflow: hidden;
